Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@
                                 <div class="info">
                                     <h5>Location</h5>
                                     <p>
-                                        Burjman,Dubai
+                                        Dubai,UAE
                                     </p>
                                 </div>
                             </li>
@@ -1256,5 +1256,6 @@ document.querySelector(".contact-form").addEventListener("submit", function(e) {
     <script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
